Phase 3: Add Stripe payment infrastructure (foundation)
CORE PAYMENT SYSTEM:
- Created payments.py blueprint with Stripe integration
- Created webhooks.py for handling Stripe async events
- Registered both blueprints in app.py

STRIPE CONFIGURATION:
- Added stripe>=7.0.0 to requirements.txt
- Extended config.py with Stripe API keys and price IDs
- Updated .env.example with complete Stripe setup guide

PAYMENT PROCESSING:
- /payments/checkout - Initiates Stripe checkout for monthly/annual/lifetime
- /payments/success - Handles successful payment and updates user subscription
- /payments/cancel - Displays when user cancels checkout
- create_stripe_checkout_session() - Creates Stripe Checkout Session
- cancel_stripe_subscription() - Cancels recurring subscriptions

WEBHOOK HANDLERS:
- /webhooks/stripe - Verifies signature and routes events
- checkout.session.completed - Processes new subscriptions
- customer.subscription.updated - Handles subscription changes
- customer.subscription.deleted - Processes cancellations
- invoice.payment_succeeded - Records successful renewals
- invoice.payment_failed - Handles payment failures

TEMPLATES:
- templates/payments/success.html - Payment success page with celebration
- templates/payments/cancel.html - Payment cancelled page with retry option

FEATURES IMPLEMENTED:
✓ Stripe customer creation with metadata
✓ Checkout session creation (subscription & one-time)
✓ Payment verification and user subscription update
✓ Subscription and Payment record creation
✓ Webhook signature verification (security)
✓ Idempotent webhook handling
✓ Payment failure tracking (3 strikes = cancellation)
✓ Automatic subscription renewal tracking
✓ Purple gradient theme on all payment pages

NEXT STEPS (Phase 3 continuation):
- Set up Stripe test account at https://dashboard.stripe.com
- Create 3 products in Stripe: Monthly (.99), Annual (9.99), Lifetime (9.99)
- Get test API keys and price IDs
- Add to .env file
- Install Stripe CLI for webhook testing
- U

--- a/.env.example
+++ b/.env.example
@@ -31,9 +31,40 @@ DATABASE_URL=sqlite:///habits.db
 # REDIS_URL=redis://localhost:6379/0
 
 # ==========================================
+# STRIPE PAYMENT CONFIGURATION (Phase 3)
+# ==========================================
+# Get these from: https://dashboard.stripe.com/apikeys
+# Use test keys (sk_test_xxx) for development, live keys (sk_live_xxx) for production
+
+# Stripe API Keys
+STRIPE_SECRET_KEY=sk_test_your_test_secret_key_here
+STRIPE_PUBLISHABLE_KEY=pk_test_your_test_publishable_key_here
+
+# Stripe Webhook Secret (from Stripe Dashboard > Developers > Webhooks)
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+# Stripe Price IDs (create products in Stripe Dashboard first)
+# Monthly Subscription: $2.99/month
+STRIPE_MONTHLY_PRICE_ID=price_xxxxxxxxxxxxx
+
+# Annual Subscription: $19.99/year (BEST VALUE)
+STRIPE_ANNUAL_PRICE_ID=price_xxxxxxxxxxxxx
+
+# Lifetime Purchase: $59.99 one-time
+STRIPE_LIFETIME_PRICE_ID=price_xxxxxxxxxxxxx
+
+# ==========================================
+# APP URL (for payment redirects)
+# ==========================================
+# Development: http://localhost:5000
+# Production: https://your-domain.com
+APP_URL=http://localhost:5000
+
+# ==========================================
 # RENDER.COM DEPLOYMENT NOTES
 # ==========================================
 # 1. Set FLASK_ENV=production in Render dashboard
 # 2. Generate strong SECRET_KEY and add to Render environment variables
 # 3. Add PostgreSQL database - DATABASE_URL auto-populated
 # 4. (Optional) Add Redis instance for production rate limiting
+# 5. Add all STRIPE_* variables from your Stripe dashboard (use live keys)
